[gd_scene load_steps=2 format=3 uid="uid://cshj76rugojak"]

[ext_resource type="Script" uid="uid://cjmhynu7dueom" path="res://Scripts/upgrade_turrets.gd" id="1_k84dv"]

[node name="UpgradeHud" type="Control" groups=["ui"]]
z_index = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_k84dv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DamageButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Damage"

[node name="FireRateButton" type="Button" parent="Panel/VBoxContainer"]
z_index = 1000
layout_mode = 2
text = "Fire Rate"

[node name="RangeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Range"

[node name="TargetingModeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Modo: Terrestre"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
